k8s/bes/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: media
spec:
  selector:
    app: immich
  ports:
    - port: 2283
      targetPort: 2283
